--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,7 +5,7 @@ tag = True
 
 # add parsing for beta releases
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>[a-z]+)?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
@@ -15,5 +15,5 @@ values =
 	beta
 	gamma
 
-[bumpversion:file:stattleship_python/__init__.py]
+[bumpversion:file:stattlepy.py]
 [bumpversion:file:setup.py]
