--- a/tox.ini
+++ b/tox.ini
@@ -10,4 +10,10 @@ deps =
 
 [flake8]
 ignore = W191
+max-complexity = 10
+hang-closing = True
+exclude = .git,env,docs,build,setup.py
 
+[pytest]
+addopts = --doctest-glob='docs/*.rst'
+testpaths = tests docs README.rst
